week 3 - practice, projects + algorithms

--- a/week-3/project_3.ipynb
+++ b/week-3/project_3.ipynb
@@ -98,17 +98,17 @@
     "d = (b ** 2) - 4 * a * c\n",
     "\n",
     "if d > 0:\n",
-    "    root1 = (-b - cmath.sqrt(d))/(2*a)\n",
+    "    root1 = (-b + cmath.sqrt(d))/(2*a)\n",
     "    root2 = (-b - cmath.sqrt(d))/(2*a)\n",
     "    print (\"The roots of the quadratic equation are 'Real and Unequal' and they are: \", root1, root2)\n",
     "\n",
     "elif d < 0:\n",
-    "    root1 = (-b - cmath.sqrt(d))/(2*a)\n",
+    "    root1 = (-b + cmath.sqrt(d))/(2*a)\n",
     "    root2 = (-b - cmath.sqrt(d))/(2*a)\n",
     "    print (\"The roots of the quadratic equation are 'Imaginary' and they are: \", root1, root2 )\n",
     "\n",
     "elif d == 0:\n",
-    "    root1 = (-b - cmath.sqrt(d))/(2*a)\n",
+    "    root1 = (-b + cmath.sqrt(d))/(2*a)\n",
     "    root2 = (-b - cmath.sqrt(d))/(2*a)\n",
     "    print (\"The roots of the quadratic equation are 'Real and Equal' and they are: \", root1, root2 )\n",
     "\n",
