week 3 - practice, programs + algorithms

--- a/week-3/project_3.ipynb
+++ b/week-3/project_3.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! Welcome to Mirireoluwa's Program. This program aims to find the roots of Quadratic equations18\n",
+      "Hello! Welcome to Mirireoluwa's Program. This program aims to find the roots of Quadratic equations\n",
       "A quadratic equation follows the format: ax^2 + bx + c = 0\n",
       "The roots of the quadratic equation are 'Imaginary' and they are:  (-1-2.23606797749979j) (-1-2.23606797749979j)\n",
       "Thank you for using Mirireoluwa's Program\n"
